# ComfyUI-Merlin

./: README.md  __init__.py  gemini_prompt_expander.py  magic_options.json  magic_photo_prompt.py  pyproject.toml
web/: gemini_prompt_expander.js
